test/Conversions/smt_to_smtlib_root_validation.llzk
// RUN: split-file %s %t
// RUN: llzk-translate --smt-to-smtlib -verify-diagnostics %t/no-solver.mlir
// RUN: llzk-translate --smt-to-smtlib -verify-diagnostics %t/multiple-solvers.mlir
// RUN: llzk-translate --smt-to-smtlib -verify-diagnostics %t/nested-only.mlir
// RUN: llzk-translate --smt-to-smtlib -verify-diagnostics %t/solver-inputs.mlir
// RUN: llzk-translate --smt-to-smtlib -verify-diagnostics %t/solver-results.mlir
// RUN: llzk-translate --smt-to-smtlib -verify-diagnostics %t/direct-nested.mlir
// RUN: llzk-translate --smt-to-smtlib -verify-diagnostics %t/helper-nested.mlir
// Purpose: canonical root-contract failures are checked with op-local diagnostics.

//--- no-solver.mlir
// expected-error @+1 {{smt-to-smtlib could not find a top-level smt.solver in the root module}}
 module {
  func.func @helper_only(%x: !smt.int) -> !smt.int {
    return %x : !smt.int
  }
}

//--- multiple-solvers.mlir
// expected-error @+1 {{smt-to-smtlib requires exactly one top-level smt.solver in the root module}}
module {
  smt.solver () : () -> () {
    smt.yield
  }

  smt.solver () : () -> () {
    smt.yield
  }
}

//--- nested-only.mlir
// expected-error @+1 {{smt-to-smtlib could not find a top-level smt.solver in the root module}}
module {
  func.func @nested_only() {
    smt.solver () : () -> () {
      smt.yield
    }
    return
  }
}

//--- solver-inputs.mlir
module {
  %zero = arith.constant 0 : i32
  // expected-error @+1 {{SMT-LIB scripts have no standard parameter channel; the selected top-level smt.solver must be a closed script}}
  smt.solver (%zero) : (i32) -> () {
  ^bb0(%arg0: i32):
    smt.yield
  }
}

//--- solver-results.mlir
module {
  // expected-error @+1 {{SMT-LIB scripts have no standard return channel; the selected top-level smt.solver must not return results}}
  %value = smt.solver () : () -> (i32) {
    %zero = arith.constant 0 : i32
    smt.yield %zero : i32
  }
}

//--- direct-nested.mlir
module {
  smt.solver () : () -> () {
    // expected-error @+1 {{nested smt.solver is not exportable to SMT-LIB; SMT-LIB has a single script context, so use push/pop if same-solver nesting was intended}}
    smt.solver () : () -> () {
      smt.yield
    }
    smt.yield
  }
}

//--- helper-nested.mlir
module {
  func.func @nested_helper() {
    // expected-error @+1 {{nested smt.solver is not exportable to SMT-LIB; SMT-LIB has a single script context, so use push/pop if same-solver nesting was intended}}
    smt.solver () : () -> () {
      smt.yield
    }
    return
  }

  smt.solver () : () -> () {
    // expected-error @+1 {{smt-to-smtlib requires an emit-compatible helper callee}}
    func.call @nested_helper() : () -> ()
    smt.yield
  }
}
